# 240101

./: .buildinfo  LICENSE  README.md  company.html  company.orders.html  explore.html  explore.ipynb  genindex.html  index.html  modules.html  objects.inv  orders.db  orders.jsonl  orders.sqlite  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  solution.html
.github/workflows/: docs.yml  main.yml
_sources/: company.orders.rst.txt  company.rst.txt  index.md.txt  solution.md.txt
docs/: orders.sqlite
docs/source/: conf.py  explore.ipynb  index.md  index.rst  modules.rst  solution.md
src/company/orders/: __init__.py  __main__.py  _basis.py  _common.py  _domain.py  _service.py  _shared.py  _storage.py  schema.sql
src/meiro/orders/: __init__.py  __main__.py  _domain.py  _schema.py  _service.py  _shared.py  _storage.py  insert.sql  schema.sql
src/merio/order/: _service..py
tests/: test_domain.py  test_service.py
